fourth part of reforge finished . I have enough ...

--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -1,224 +1,1 @@
-{
-  "IntegrationGamesHeader": "Gry integracyjne",
-  "IntegrationGamesContent": "Szukasz sposobu na swietna zabawe , wyeliminowanie nudy , poznanie sie , tutaj znajdziesz to wszystko .",
-  "BellwetherHeader": "Wodzirej",
-  "BellwetherContent": " Alkohol jeszcze nie dziala , nikt nie chce dzialac , pozostale opcje sa nie atrakcyjne .Aplikacja przygotuje dla Was cos ekstra ;)",
-  "JokesHeader": "Kawały",
-  "JokesContent": "Gdy dobre suchary nie sa twym atutem , zablysnij dzieki zebranej w jednej miejscu kompleksowej bibliotece zartow .Brakuje ci odwagi niech zrobi to za Ciebie program .",
-  "PhotoGalleryHeader": "Galeria zdjęć",
-  "PhotoGalleryContent": "Podziel się swoimi zdjęciami z niezapomnianych imprez.",
-  "GuidesHeader": "Poradnik",
-  "GuidesContent": "Nie wiesz jak sie zachowac wsrod tlumu , jak zorganizowac niezapomniana impreze. Tutaj znajdziesz odpowiedzi na dreczace Cie kwestie .",
-  "Language": "Język",
-  "Login": "Logowanie",
-  "LogOut": "Wyloguj",
-  "Search": "Szukaj",
-  "SearchByName": "Szukaj według nazwy",
-  "SearchGame": "Szukaj gry",
-  "SearchJoke": "Szukaj żartu",
-  "SearchJokeCategory": "Kategoria żartu",
-  "SearchByContent": "Szukaj po zawartości",
-  "SearchResetAllFilters": "Resetuj wszystkie filtry",
-  "EmailAddress": "Email adres",
-  "Password": "Hasło",
-  "ForgetThePassword": "Zapomniałeś hasła ?",
-  "SignIn": "Zaloguj",
-  "KeepMeLoggedIn": "pozostaw mnie zalogowanym",
-  "NewHere": "Nowy tutaj?",
-  "JoinUs": "Dołącz do nas",
-  "Register": "Zarejestruj",
-  "HaveAccount": "Posiadasz konto ?",
-  "Name": "Nazwa",
-  "SocialLogins": "Portale Społeczne",
-  "SocialLoginsDescription": "Możesz zalogować się przy użyciu jednego z poniższych portali społecznych",
-  "Submit": "Zatwierdz",
-  "URT": "Odśwież Token",
-  "ConfirmPassword": "Potwierdz hasło",
-  "HaveFun": "Miłej zabawy",
-  "Tools": "Narzędzia",
-  "ManagementGames": "Zarządzanie grami",
-  "ManagementJokes": "Zarządzanie kawałami",
-  "ManagementAccounts": "Zarządzanie kontami",
-  "ManagementLanguages": "Zarządzanie językami",
-  "GameName": "Nazwa zabawy",
-  "GameDetails": "Detale zabawy",
-  "GameCategory": "Kategoria zabawy",
-  "PaceOfPlay": "Tempo zabawy",
-  "NumberOfPlayer": "Liczba graczy",
-  "PreparationFun": "Przygotowanie zabawy",
-  "AddGame": "Dodaj grę",
-  "SaveGame": "Zapisz grę",
-  "DeleteGame": "Usuń grę",
-  "Details": "Detale",
-  "GameFeature": "Detale gry",
-  "MoreFunction": "Więcej funkcji",
-  "AddIntegrationGame": "Dodaj grę integracyjną dla aktualnie zaznaczonego glównego języka",
-  "ManagementIntegrationGameFeatures": "Zarządzanie cechami gier",
-  "NewGame": "Nowa gra",
-  "GameFeatures": "Cechy gry",
-  "SelectLanguageForTheGame": "Wybierz język dla gry",
-  "SelectCategoryForGame": "Wybierz kategorie dla gry",
-  "SelectPaceOfTheGame": "Wybierz tempo gry",
-  "SelectNumberOfPlayerForTheGame": "Wybierz liczbę graczy",
-  "SelectPreparationGame": "Wybierz przygotowanie gry",
-  "FeatureDescription": "Szablonem cech jest język angielski. W przypadku dodania nowego języka należy wypełnić poniższe pola wzorując się na definicji po prawej stronie.",
-  "ChooseLanguage": "Wybierz język",
-  "Save": "Zapisz",
-  "IKnowWhatIAmDoing": "Wiem co robię",
-  "FeaturesDetails": "Detale cech",
-  "SelectDetail": "Wybierz detal",
-  "GameAdded": "Gra dodana",
-  "GameNotAdded": "Gra nie została dodana",
-  "GameExists": "Gra o takiej nazwie już istnieje",
-  "GameNotExists": "Gra nie istnieje",
-  "GameEdited": "Gra została edytowana",
-  "GameNotEdited": "Gra nie została edytowana",
-  "GameRemoved": "Gra została usunięta",
-  "GameNotRemoved": "Gra nie została usunieta",
-  "SeveralLanguageGameError": "Gra posiada już taką translację",
-  "Previous": "Wstecz",
-  "Next": "Dalej",
-  "GamesEdition": "Edycja gier",
-  "AddJoke": "Dodaj kawał dla aktualnie zaznaczonego głównego języka",
-  "JokesEdition": "Edycja kawałów",
-  "ListOfJokeIncludesAvailableTranslation": "Lista kawałów zawierajaca dostepne translacje",
-  "ManagementJokeCategories": "Zarządzanie kategoriami kawałów",
-  "AddJokeCategory": "Dodaj kategorie żartu dla aktualnie zaznaczonego głównego języka",
-  "AddJokeShort": "Dodaj żart",
-  "SaveJoke": "Zapisz żart",
-  "DeleteJoke": "Usuń żart",
-  "CategoryName": "Nazwa kategori",
-  "EditJokeCategory": "Edytuj kategorie żartu dla aktualnie zaznaczonego głównego języka",
-  "EditJoke": "Edytuj żart dla aktualnie zaznaczonego głównego języka",
-  "JokeContent": "Zawartość kawału",
-  "JokeCategory": "Kategoria żartu",
-  "DeleteJokeCategory": "Usuń kategorie żartu",
-  "SaveCategory": "Zapisz kategorie",
-  "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
-  "OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage": "Inne translacje dla aktualnie zaznaczonej kategorii żartu i języka",
-  "SelectLanguageForTheJokeCategory": "Wybierz język dla kategorii żartu",
-  "JokeCategoryNotEdited": "Kategoria żartu nie została edytowana",
-  "JokeCategoryEdited": "Kategoria żartu została edytowana",
-  "JokeCategoryNotExists": "Kategoria żartu nie istnieje",
-  "JokeCategoryDeleted": "Kategoria żartu została usunięta",
-  "JokeCategoryNotDeleted": "Kategoria żartu nie została usunięta",
-  "JokeCategoryAdded": "Kategoria żartu została dodana",
-  "JokeCategoryNotAdded": "Kategoria żartu nie została dodana , zmień jej nazwę",
-  "ThisJokeCategoryExists": "Ketegoria żartu o takiej nazwie już istnieje zmień jej nazwę",
-  "JokeCategoryTranslationNotExists": "Translacja kategorii żartu nie istnieje",
-  "RemoveJokeCategoryTranslation": "Usuwanie translacji kategori żartu",
-  "SelectCategoryForJoke": "Wybierz kategorie dla żartu",
-  "JokeAdded": "Zart został dodany",
-  "JokeExists": "Taki żart już istnieje",
-  "JokeNotAdded": "Żart nie został dodany .",
-  "JokeDeleted": "Żart został usunięty",
-  "JokeNotDeleted": "Żart nie został usunięty",
-  "JokeDetailNotExists": "Detal żartu nie istnieje",
-  "JokeNotExists": "Żart nie istnieje",
-  "OtherTranslationForTheCurrentlySelectedJokeAndLanguage": "Inne translacje dla aktualnie zaznaczonego żartu i języka",
-  "RemoveJokeTranslation": "Usuń translacje żartu",
-  "ForLanguage": "Dla języka : ",
-  "SelectLanguageForTheJoke": "Wybierz język dla żartu",
-  "AutoCompleteJokeCategoryForLanguage": "Kategoria żartu zostanie automatycznie przetłumaczona na aktualnie wybrany język innej translacji",
-  "LanguageNotExists": "Language not exists",
-  "AddLanguage": "Dodaj język",
-  "LanguagesEdition": "Edycja języków",
-  "MainLanguageTranslation": "Translacja dla głównego języka",
-  "LanguageName": "Nazwa języka",
-  "LanguageShortName": "Krótka nazwa języka dla usługi tłumaczącej",
-  "SaveBasicLanguageInformation": "Zapisz podstawowe informacje",
-  "Key": "Klucza",
-  "Value": "Wartości",
-  "SelectAWay": "Wybierz sposób",
-  "LanguageKeyValueEdited": "Wartość klucza została edytowana",
-  "LanguageKeyValueNotEdited": "Wartość klucza nie zostala edytowana",
-  "LanguageEdited": "Język został edytowany",
-  "LanguageNotEdited": "Język nie został edytowany",
-  "PublishLanguage": "Publikuj język",
-  "HowToPublishLanguage": "Aby opublikować język wypełnione musza być wszystkie wartości dla klucza (lista poniżej) . Minimum jeden język musi być publiczny",
-  "LanguageFileNotExists": "Plik językowy nie istnieje",
-  "EmptyKeysExists": "Plik językowy zawiera puste pozycje",
-  "OnlyOnePublicLangugae": "Istnieje tylko jeden publiczny język",
-  "LanguageHasBeenPublished": "Język został opublikowany",
-  "LanguageHasBeenNonPublic": "Język nie jest publiczny",
-  "LanguageAdded": "Język został dodany",
-  "LanguageNotAdded": "Język nie został dodany",
-  "LanguageExists": "Taki język juz istnieje",
-  "RemovingLanguage": "Usuwanie języka :",
-  "RemovingLanguageDialog": "Operacja spowoduje usunięcie wszystkich translacji (struktura strony , gry integracyjne , kawały). Nie będzie możliwości odzyskania tych danych. Język polski oraz angielski są nieusuwalne bo stanowią szablon dla nowych językowych translacji",
-  "LanguageCanNotBeRemoved": "Język nie może został usunięty bo jest na liście językow nieusuwalnych",
-  "LanguageRemoved": "Język został usunięty",
-  "LanguageNotRemoved": "Język nie został usunięty",
-  "LanguageVersion": "Wersja języka",
-  "LanguageVersionDescription": "Wersja języka jest wyznacznikiem dla aplikacji mobilnej w przypadku jakichkolwiek modyfikacji wartośc tą należy zwiększyć o np  0.5. Gdy nie zostanie ona podniesiona Bellwether nie pobierze nowej wersji translacji .",
-  "Change": "Zmiana",
-  "YourLogin": "Twój login",
-  "EnterYourLogin": "Proszę wprowadz swój login",
-  "YourPassword": "Twoje hasło",
-  "EnterYourPassword": "Proszę wprowadz swoje hasło",
-  "PleaseConfirmYourPassword": "Prosze potwierdz swoje hasło",
-  "PleaseSelectGame": "Proszę wybierz grę",
-  "DeleteTheGame": "Usuwanie gry",
-  "RemoveMainTranslation": "Usuń główną translację",
-  "RemoveAllTranslation": "Usuń wszystkie translacje",
-  "Success": "Sukces",
-  "Failure": "Niepowodzenie",
-  "GameFeatureEdited": "Cecha gry została edytowana",
-  "GameFeatureDetailEdited": "Detal cechy gry został edytowany",
-  "GameFeatueNotEdited": "Cecha gry nie została edytowana",
-  "GameFeatureDetailNotEdited": "Detal cechy gry nie został edytowany",
-  "SaveTranslation": "Zapisz translację",
-  "DeleteTranslation": "Usuń translację",
-  "TranslationAdded": "Translacja została dodana",
-  "TranslationEdited": "Translacja została edytowana",
-  "TranlastionRemoved": "Translacja została usunięta",
-  "TranslationNotAdded": "Translacja nie została dodana",
-  "TranslationNotEdited": "Translacja nie została edytowana",
-  "GameTranslationNotExists": "Translacja gry nie istnieje",
-  "GameFeatureTranslationNotExists": "Cechy translacji gry nie istnieją",
-  "TranslationNotRemoved": "Translacja nie została usunięta",
-  "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "Głowna translacja bazująca na aktualnie wybranym języku portalu",
-  "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Inne translacje dla aktualnie zaznaczonej gry i języka",
-  "AutoCompleteGameFeaturesForLanguage": "Detale gry zostaną automatycznie przetłumaczone na aktualnie wybrany język innej translacji",
-  "ListOfGameIncludesAvailableTranslation": "Lista gier zawierajaca dostepne translacje",
-  "TranslateByGoogle": "Przetłumacz za pomocą google",
-  "TranslateByGoogleDescription": "Po dodaniu pierwszej translacji zostanie uaktywniona opcja przetłumacz za pomocą google translate.Pamiętaj jednak że żaden algorym nie zastąpi człowieka ... no chyba że pisał go autor tego portalu ;P ",
-  "Translate": "Przetłumacz",
-  "RemoveGameTranslation": "Usuwanie translacji gry",
-  "Delete": "Usuń",
-  "Error": "Bład krytyczny który został odnotowany i zostanie niebawem poprawiony",
-  "Warning": "Uwaga",
-  "WrongLanguageCodeConfiguration": "w przypadku błednej konfiguracji może doprowadzić do nieprawidłowych translacji . ",
-  "CurrentlyUserService": "Aktualnie używany serwis : ",
-  "CodeForLanguage": "Kod dla języka ",
-  "ErrorDuringTranslation": "Błąd podczas translacji",
-  "TranslationCompletedSuccessfully": "Translacja zakończona pomyślnie",
-  "TranslateAllLanguageKeys": "Przetłumacz wszystkie klucze",
-  "QuantityOfLanguageKeys": "Obecna liczba kluczy to :",
-  "TranslationOfAllKeyLanguage": "Tłumaczenie wszystkich kluczy językowych",
-  "TranslateAllLangaugeKeysDescription": "Translacja może trochę potrwać . Uwaga dane zostaną automatycznie zapisane , proszę o weryfikację wynikow",
-  "ContentLanguageFilesAreNotCompatible": "Zawartości plików językowych nie sa zgodne ",
-  "KeyValuesAreCorrectlyFilled": "Wartości kluczy zostały poprawnie wypełnoine",
-  "KeyValuesAreNotFilled": "Wartości kluczy nie zostały wypełnione",
-  "Home": "Home",
-  "CreateFeatures": "Utwórz cechy",
-  "GameFeaturesAdded": "Cechy gry zostały dodane",
-  "GameFeaturesNotAdded": "Cechy gry nie zostały dodane",
-  "Jokes": "Kawały",
-  "Settings": "Ustawienia",
-  "CurrentLanguage": "Aktualny język",
-  "ChangeLanguage": "Zmień język",
-  "ApplyLanguage": "Zastosuj język",
-  "ManagementVersions": "Zarządzanie wersjami",
-  "LanguageVersion": "Wersja języka",
-  "IntegrationGameVersion": "Wersja gier integracyjnych",
-  "JokeCategoryVersion": "Wersja kategori kawałów",
-  "JokeVersion": "Wersja kawałów",
-  "Version": "Wersja",
-  "EntriesInTheLanguageFile": "Pozycje w pliku językowym",
-  "NumbersOfIntegrationGames": "Liczba gier integracyjnych",
-  "NumbersOfCategoriesJokes": "Liczba kategorii zartów",
-  "NumbersOfJokes": "Liczba kawałów",
-  "AddVersion": "Dodaj wersję",
-  "IncreasingVersionDescription": "Obecna wersja + 0.1"
-}
+{"IntegrationGamesHeader":"","IntegrationGamesContent":"","BellwetherHeader":"","BellwetherContent":"","JokesHeader":"","JokesContent":"","PhotoGalleryHeader":"","PhotoGalleryContent":"","GuidesHeader":"","GuidesContent":"","Language":"","Login":"","LogOut":"","Search":"","SearchByName":"","SearchGame":"","SearchJoke":"","SearchJokeCategory":"","SearchByContent":"","SearchResetAllFilters":"","EmailAddress":"","Password":"","ForgetThePassword":"","SignIn":"","KeepMeLoggedIn":"","NewHere":"","JoinUs":"","Register":"","HaveAccount":"","Name":"","SocialLogins":"","SocialLoginsDescription":"","Submit":"","URT":"","ConfirmPassword":"","HaveFun":"","Tools":"","ManagementGames":"","ManagementJokes":"","ManagementAccounts":"","ManagementLanguages":"","GameName":"","GameDetails":"","GameCategory":"","PaceOfPlay":"","NumberOfPlayer":"","PreparationFun":"","AddGame":"","SaveGame":"","DeleteGame":"","Details":"","GameFeature":"","MoreFunction":"","AddIntegrationGame":"","ManagementIntegrationGameFeatures":"","NewGame":"","GameFeatures":"","SelectLanguageForTheGame":"","SelectCategoryForGame":"","SelectPaceOfTheGame":"","SelectNumberOfPlayerForTheGame":"","SelectPreparationGame":"","FeatureDescription":"","ChooseLanguage":"","Save":"","IKnowWhatIAmDoing":"","FeaturesDetails":"","SelectDetail":"","GameAdded":"","GameNotAdded":"","GameExists":"","GameNotExists":"","GameEdited":"","GameNotEdited":"","GameRemoved":"","GameNotRemoved":"","SeveralLanguageGameError":"","Previous":"","Next":"","GamesEdition":"","AddJoke":"","JokesEdition":"","ListOfJokeIncludesAvailableTranslation":"","ManagementJokeCategories":"","JokeCategory":"","AddJokeCategory":"","CategoryName":"","EditJokeCategory":"","EditJoke":"","JokeContent":"","DeleteJokeCategory":"","SaveCategory":"","ListOfJokeCategoryIncludesAvailableTranslation":"","OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage":"","SelectLanguageForTheJokeCategory":"","JokeCategoryNotEdited":"","JokeCategoryEdited":"","JokeCategoryNotExists":"","JokeCategoryDeleted":"","JokeCategoryNotDeleted":"","JokeCategoryAdded":"","JokeCategoryNotAdded":"","ThisJokeCategoryExists":"","JokeCategoryTranslationNotExists":"","RemoveJokeCategoryTranslation":"","SelectCategoryForJoke":"","ForLanguage":"","AddJokeShort":"","SaveJoke":"","DeleteJoke":"","JokeAdded":"","JokeExists":"","JokeNotAdded":"","JokeDeleted":"","JokeNotDeleted":"","JokeDetailNotExists":"","JokeNotExists":"","OtherTranslationForTheCurrentlySelectedJokeAndLanguage":"","SelectLanguageForTheJoke":"","AutoCompleteJokeCategoryForLanguage":"","RemoveJokeTranslation":"","LanguageNotExists":"","AddLanguage":"","LanguagesEdition":"","MainLanguageTranslation":"","LanguageName":"","LanguageShortName":"","SaveBasicLanguageInformation":"","Key":"","Value":"","SelectAWay":"","LanguageKeyValueEdited":"","LanguageKeyValueNotEdited":"","LanguageEdited":"","LanguageNotEdited":"","PublishLanguage":"","HowToPublishLanguage":"","LanguageFileNotExists":"","EmptyKeysExists":"","OnlyOnePublicLangugae":"","LanguageHasBeenPublished":"","LanguageHasBeenNonPublic":"","LanguageAdded":"","LanguageNotAdded":"","LanguageExists":"","RemovingLanguage":"","RemovingLanguageDialog":"","LanguageCanNotBeRemoved":"","LanguageRemoved":"","LanguageNotRemoved":"","LanguageVersion":"","LanguageVersionDescription":"","Change":"","YourLogin":"","EnterYourLogin":"","YourPassword":"","EnterYourPassword":"","PleaseConfirmYourPassword":"","PleaseSelectGame":"","DeleteTheGame":"","RemoveMainTranslation":"","RemoveAllTranslation":"","Success":"","Failure":"","GameFeatureEdited":"","GameFeatureDetailEdited":"","GameFeatueNotEdited":"","GameFeatureDetailNotEdited":"","SaveTranslation":"","DeleteTranslation":"","TranslationAdded":"","TranslationEdited":"","TranlastionRemoved":"","TranslationNotAdded":"","TranslationNotEdited":"","TranslationNotRemoved":"","GameTranslationNotExists":"","GameFeatureTranslationNotExists":"","HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal":"","OtherTranslationForTheCurrentlySelectedGameAndLanguage":"","AutoCompleteGameFeaturesForLanguage":"","ListOfGameIncludesAvailableTranslation":"","TranslateByGoogle":"","TranslateByGoogleDescription":"","Translate":"","RemoveGameTranslation":"","Delete":"","Error":"","Warning":"","WrongLanguageCodeConfiguration":"","CurrentlyUserService":"","CodeForLanguage":"","ErrorDuringTranslation":"","TranslationCompletedSuccessfully":"","TranslateAllLanguageKeys":"","QuantityOfLanguageKeys":"","TranslationOfAllKeyLanguage":"","TranslateAllLangaugeKeysDescription":"","ContentLanguageFilesAreNotCompatible":"","KeyValuesAreCorrectlyFilled":"","KeyValuesAreNotFilled":"","Home":"","CreateFeatures":"","GameFeaturesAdded":"","GameFeaturesNotAdded":"","Jokes":"","Settings":"","CurrentLanguage":"","ChangeLanguage":"","ApplyLanguage":"","ManagementVersions":"","IntegrationGameVersion":"","JokeCategoryVersion":"","JokeVersion":"","Version":"","EntriesInTheLanguageFile":"","NumbersOfIntegrationGames":"","NumbersOfCategoriesJokes":"","NumbersOfJokes":"","AddVersion":"","IncreasingVersionDescription":""}
