gameFeature versioning added ... I'm too tired to play with it

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -215,6 +215,7 @@
   "ApplyLanguage": "Apply language",
   "ManagementVersions": "Versions management",
   "IntegrationGameVersion": "Integration game version",
+  "GameFeatureVersion": "Game Feature version",
   "JokeCategoryVersion": "Joke category version",
   "JokeVersion": "Joke version",
   "Version": "Version",
